add_library(Evaluation STATIC
            aic.h
            aic.cpp
            alergia.h
            alergia.cpp
            alergia94.h
            alergia94.cpp
            count_types.h
            count_types.cpp
            css.h
            css.cpp
            edsm.h
            edsm.cpp
            evaluate.h
            evaluate.cpp
            gini.h
            gini.cpp
            kldistance.h
            kldistance.cpp
            l_star_evaluation.h
            l_star_evaluation.cpp
            likelihood.h
            likelihood.cpp
            mealy.h
            mealy.cpp
            mse_error.h
            mse_error.cpp
            overlap.h
            overlap.cpp
            overlap4logs.h
            overlap4logs.cpp
            rti+.h
            rti+.cpp
            space-saving.h
            space-saving.cpp
            string_probability_estimator.h
            string_probability_estimator.cpp
            weight_comparator.h
            weight_comparator.cpp)